;;;; -*- coding: utf-8; -*-
changes in sbcl-1.0.5 relative to sbcl-1.0.4:
  * minor incompatible change: changed experimental JOIN-THREAD interface
  * documentation: unwinding from asyncronous events has been
    documented as unsafe.
  * documentation: SB-SYS:WITHOUT-GCING has been documented as unsafe
    in multithreaded application code.
  * bug fix: GC deadlocks from asynchronous interrupts has been fixed
    by disabling interrupts for the duration of any
    SB-SYS:WITHOUT-GCING section.

changes in sbcl-1.0.4 relative to sbcl-1.0.3:
  * new platform: experimental support for x86-64/darwin (MacOS).
  * incompatible change: the thread-safe (on most platforms) getaddrinfo
    and getnameinfo sockets functions are used instead of gethostbyaddr
    and gethostbyname, on platforms where the newer functions are available.
    As a result, the ALIASES field of HOST-ENT will always be NIL on these
    platforms.
  * change: runtimes with embedded cores (i.e. saved with :EXECUTABLE T)
    don't print the startup banner, but behave as if --noinform was passed
    as a command line argument. (thanks to Kevin Reid)
  * new experimental feature: added JOIN-THREAD (by NIIMI Satoshi)
  * optimization: code using alien values with undeclared types is much faster.
  * optimization: the compiler is now able to open code SEARCH in more cases.
  * optimization: more compact typechecks on x86-64 (thanks to Lutz Euler)
  * bug fix: using standardized COMMON-LISP special variables as loop
    variables no longer signals bogus package lock violations. (reported
    by Eric Marsden)
  * bug fix: declaring local loop variables to be of a range-limited type
    such as (SINGLE-FLOAT 1.0 2.0) no longer causes a compile-time error.
    (reported by Andras Simon)
  * bug fix: >= and <= gave wrong results when used with NaNs. (Some NaN
    bugs remain on x86-64.)
  * bug fix: the #= and ## reader macros now interact reasonably with
    funcallable instances.